<resources>
    <string name="app_name">College Log</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="register">Register</string>
    <string name="department">Department</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="role">Role</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_student_layout">StudentLayoutActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="school">School</string>
    <string name="users">Users</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="url">Url</string>
    <string name="save">Save</string>
    <string name="ok">Ok</string>
</resources>
