<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.RegisterUserFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- TODO: Update blank fragment layout -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <TextView
                android:id="@+id/text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <TextView
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile" />

            <TextView
                android:id="@+id/text_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <TextView
                android:id="@+id/text_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/date_of_birth"
                />

            <TextView
                android:id="@+id/text_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/school"/>

            <TextView
                android:id="@+id/text_school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/department"
                 />

            <TextView
                android:id="@+id/text_department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/role"
                 />

            <TextView
                android:id="@+id/text_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <Button
                android:id="@+id/ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>